added code crew as a sponsor

--- a/index.html
+++ b/index.html
@@ -82,8 +82,18 @@
           <a href="https://www.youtube.com/watch?v=icyTUMjlvMg" target="_blank">Tommy DeVoss</a>. Hack Club also offers worldwide coding tournaments, which are a great way for students to bond and experience what it's like to hack in a team environment.
         </p><br>
         <h1 class="welcome">Our Sponsors</h1>
-        <p>Support the generous companies that help make Memphis Hack Club possible!</p>
+        <p>Memphis Hack Club is a 503 nonprofit baced organization. Support the generous companies/organizations that help make Memphis Hack Club possible!</p>
         <div class="card-grid">
+          <div class="card">
+            <a href="https://www.code-crew.org" target="_blank"><img class="cardImgs" src="sponsor-images/codecrew.png">
+              <h1 class="card-title">Code Crew</h1>
+            </a>
+            <p>Code Crew is nonprofit working towards our mutually held goal of enabling all Memphis students to be taught computer science. CodeCrew hosts various summer camps, after school programs, in-school electives classes, and special events. </p>
+            <div class="tags">
+              <span class="tag tag-game">Coding</span>
+            </div>
+          </div>
+
           <div class="card">
             <a href="https://printify.com" target="_blank"><img class="cardImgs" src="sponsor-images/printify.jpeg">
               <h1 class="card-title">Printify</h1>
@@ -93,15 +103,8 @@
               <span class="tag tag-game">Print on Demand</span>
             </div>
           </div>
-          <div class="card">
-            <a href="https://replit.com" target="_blank"><img class="cardImgs" src="sponsor-images/replit.jpeg">
-              <h1 class="card-title">Replit</h1>
-            </a>
-            <p>Replit is the world's most powerful online coding IDE, and the fastest way to set up a coding environment.</p>
-            <div class="tags">
-              <span class="tag tag-game">Online IDE</span>
-            </div>
-          </div>
+
+
           <div class="card">
             <a href="https://www.stickermule.com" target="_blank"><img class="cardImgs" src="sponsor-images/stickermule.jpeg">
               <h1 class="card-title">Sticker Mule</h1>
