add merch to navbar on Join MHC page

--- a/howtojoin.html
+++ b/howtojoin.html
@@ -21,6 +21,7 @@
     <a href="#main">Join MHC</a>
     <a href="contact.html">Contact</a>
     <a href="projects.html">Projects</a>
+    <a href="merch.html">Merch</a>
   </div>
   <div id="main">
     <div class="content join">
