--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="twitter:description" content="Memphis Hack Club is a coding and engineering club open to any student at any skill level!"/>
     <meta
       name="keywords"
-      content="memphis coding, memphis student coding, memphis stem, memphis hacking, memphis hackothons, memphis student clubs, whitestation coding, midtown memphis coding, west memphis student clubs, student coding groups memphis, student programming groups memphis, memphis computer science, memphis hackclub, memphis hack club, memphis student engineering, memphis student coding groups"/>
+      content="memphis coding, memphis student coding, memphis stem, memphis hacking, memphis hackathons, memphis student clubs, whitestation coding, midtown memphis coding, west memphis student clubs, student coding groups memphis, student programming groups memphis, memphis computer science, memphis hackclub, memphis hack club, memphis student engineering, memphis student coding groups"/>
     <meta property="og:image" itemprop="image" content="images/PreviewIMG.png"/>
     <meta name="google-site-verification" content="RX2lxxwwRZafOqLZ5Os_zY4B2K6iF0WdjlXp7Qh8HgI"/>
     <link rel="apple-touch-icon" href="images/PreviewIMG.png"/>
@@ -48,7 +48,7 @@
         <p>
           Here at Memphis Hack Club, we are building a community of student makers and coders. We use our skills to build each other up to become better makers and hackers as a whole! Our goal is to give you the tools to create any tech project you can think
           up. We try to create an open and fun learning environment where anyone with any skill level can learn to code. We will teach you how to build awesome projects such as video games and websites! We host
-          <i>free weekly meetings</i>, and anyone who comes can participate and learn something new and exciting! Also, if you are new to programming, don’t worry - our workshops are very beginner friendly and we are here to help you along the way. Memphis
+          <i>free weekly meetings</i>, and anyone who comes can participate and learn something new and exciting! Also, if you are new to programming, don’t worry - our workshops are very beginner-friendly and we are here to help you along the way. Memphis
           Hack Club is run by Blake Freeman, Philip Pounds, and our amazing club members.
           <i>
             <b>
