adding my email address

--- a/contact.html
+++ b/contact.html
@@ -38,7 +38,8 @@
               <h1 class="card-title">Philip</h1>
             <p>Hello, I am Philip. Besides coding and engineering, I love eating watermelon, playing with my dog, and chillin with the club! My other interests include cars, finance, and playing a ton of soccer. I am a wind turbine
           developer, a Stencyl specialist, and a diamond hand PHP fan. I love meeting new people, and I work hard to get to know and build up every single Memphis Hack Clubber. I would love to meet you! Text me anytime(or email
-          if that’s your thing)!<br /><br /><a href="#" class="fa fa-envelope email" data-name="Philip"></a><a href="#" class="fa fa-phone phone" data-name="Philip"></a></p>
+          if that’s your thing)!<br /><br />philippounds@memphishack.com<br><a href="#" class="fa fa-envelope email" data-name="Philip"></a><a href="#" class="fa fa-phone phone" data-name="Philip"></a>
+            </p>
           </div>
           <div class="card">
               <h1 class="card-title">Blake</h1>
