--- a/contact.html
+++ b/contact.html
@@ -73,6 +73,11 @@
               <h1 class="card-title">Asher</h1>
             <p>Hello, I’m Asher! I have been interested in coding for about eight years now. I started on Scratch and just recently got into Python, HTML, and JavaScript. Besides coding, some of my favorite things to do are playing games, making music, and talking with all of the fantastic people in Memphis Hackclub. I love meeting new people and showing them around, so if you ever need some directions or anything, I can help you.<br /><br /></p>
           </div>
+
+            <div class="card">
+              <h1 class="card-title">Lilly</h1>
+            <p>Hello, I'm Lilly! I've been coding here and there for about 2 years now and am excited to learn and grow. I code websites in HTML and Roblox games in Lua. Other than coding I enjoy video design, theater, and goofing off with my friends. I'm so glad I found Memphis HackClub because it's taught me more about coding and I've made great friends in the process.<br /><br /></p>
+          </div>
           <div class="card">
               <h1 class="card-title">THE CLUB</h1>
             <p>Hello my name is <b>THE CLUB</b>, some know me as <i>THE CLUB</i> and others Memphis Hack Club. That being said, I am a mystic force that connects the most enthusiastic and creative minds together. When these minds
