contact page updated

--- a/contact.html
+++ b/contact.html
@@ -38,51 +38,72 @@
               <h1 class="card-title">Philip</h1>
             <p>Hello, I am Philip. Besides coding and engineering, I love eating watermelon, playing with my dog, and chillin with the club! My other interests include cars, finance, and playing a ton of soccer. I am a wind turbine
           developer, a Stencyl specialist, and a diamond hand PHP fan. I love meeting new people, and I work hard to get to know and build up every single Memphis Hack Clubber. I would love to meet you! Text me anytime(or email
-          if that’s your thing)!<br /><br />philippounds@memphishack.com<br><a href="#" class="fa fa-envelope email" data-name="Philip"></a><a href="#" class="fa fa-phone phone" data-name="Philip"></a>
+          if that’s your thing)!<br /><br />philippounds@memphishack.com<br>901-503-6556<br><a href="#" class="fa fa-envelope email" data-name="Philip"></a><a href="#" class="fa fa-phone phone" data-name="Philip"></a>
             </p>
           </div>
           <div class="card">
               <h1 class="card-title">Blake</h1>
             <p>Hello, my name is Blake! I have been programing 7 years and love it even more than when I started. I like 3d-printing, arduinos, and just chilling with my fellow club members. I am a python and chrome extensions
-          developer, as well as a laser eltromagentic visualizer engineer. I love checking out and helping people with their projects. If you want to ask questions about the club or want someone to hang out with, hit me up!<br /><br /><a href="#" class="fa fa-envelope email" data-name="Blake"></a><a href="#" class="fa fa-phone phone" data-name="Blake"></a></p>
+          developer, as well as a laser eltromagentic visualizer engineer. I love checking out and helping people with their projects. If you want to ask questions about the club or want someone to hang out with, hit me up!
+              <br>blakefreeman@memphishack.com<br>
+              858-946-8515
+              <br /><br /><a href="#" class="fa fa-envelope email" data-name="Blake"></a><a href="#" class="fa fa-phone phone" data-name="Blake"></a></p>
           </div>
         </div>
-        <h1 class="welcome">Meet the Welcome Team</h1>
+        <h1 class="welcome">Meet the Leadership Team</h1>
         <div class="card-grid">
           <div class="card">
               <h1 class="card-title">Ari</h1>
-            <p>Hello, my name is Arielle, and I am 15 years old! I’m pretty new at coding right now, but I love it all the same! I also enjoy math, science, Japanese, Russian, reading, writing, and talking to the awesome people on the hackclub. We lived in Japan for two and a half years, but now we’re in good old Tennessee. I love meeting new people, and am happy to help anyone get used to the wonderful people and information in this club. Feel free to contact me at any time!!<br /><br /><a href="#" class="fa fa-envelope email" data-name="Ari"></a><a href="#" class="fa fa-phone phone" data-name="Ari"></a></p>
+            <p>Hello, my name is Arielle, and I am 15 years old! I’m pretty new at coding right now, but I love it all the same! I also enjoy math, science, Japanese, Russian, reading, writing, and talking to the awesome people on the hackclub. We lived in Japan for two and a half years, but now we’re in good old Tennessee. I love meeting new people, and am happy to help anyone get used to the wonderful people and information in this club. Feel free to contact me at any time!!
+              <br></ariellerodgers>ariellerodgers@memphishack.com<br>
+              616-635-5414
+              <br /><br /><a href="#" class="fa fa-envelope email" data-name="Ari"></a><a href="#" class="fa fa-phone phone" data-name="Ari"></a></p>
           </div>
           <div class="card">
               <h1 class="card-title">Sophia</h1>
-            <p>Hello, I am Sophia! I haven’t been coding for very long, but the Memphis Hack Club has made it a very fun experience! I love animals, in fact, I love them so much that I own a pet Madagascar Hissing Cockroach named Jack, two dogs, three fish, and a cat! Among coding, I like to crochet, draw, sew, play video games, ride horses, and hang out with fellow Hack Club members! I’d love to get to know you, or answer your questions to the best of my ability, so please feel free to text or email me anytime!<br /><br /><a href="#" class="fa fa-envelope email" data-name="Sophia"></a><a href="#" class="fa fa-phone phone" data-name="Sophia"></a></p>
+            <p>Hello, I am Sophia! I haven’t been coding for very long, but the Memphis Hack Club has made it a very fun experience! I love animals, in fact, I love them so much that I own a pet Madagascar Hissing Cockroach named Jack, two dogs, three fish, and a cat! Among coding, I like to crochet, draw, sew, play video games, ride horses, and hang out with fellow Hack Club members! I’d love to get to know you, or answer your questions to the best of my ability, so please feel free to text or email me anytime!
+              <br>sophiastanford@memphishack.com<br>
+              901-338-7629
+              
+              <br /><br /><a href="#" class="fa fa-envelope email" data-name="Sophia"></a><a href="#" class="fa fa-phone phone" data-name="Sophia"></a></p>
           </div>
           <div class="card">
               <h1 class="card-title">John</h1>
-            <p>Hello, my name is John, and I’m 15. Besides programming with fellow Memphis HackClubbers, I also enjoy playing video games, especially Minecraft and Nintendo games, collecting Lego, playing soccer and watching shows with my siblings. I’ve been programming for around 5 years now, and have loved the projects we do here at Memphis Hack Club. I’ve developed my own video game an RPG about exploring the forest as teenage boy. I am an avid pianist and guitar guru. I’m a musical composer, and I also run a gaming YouTube channel. I am very proud to be a part of the team here at Memphis Hack Club and would love to meet you. I am happy to answer any questions and introduce you into Memphis HackClub, so please email or text me. <br /><br /><a href="#" class="fa fa-envelope email" data-name="John"></a><a href="#" class="fa fa-phone phone" data-name="John"></a></p>
+            <p>Hello, my name is John, and I’m 15. Besides programming with fellow Memphis HackClubbers, I also enjoy playing video games, especially Minecraft and Nintendo games, collecting Lego, playing soccer and watching shows with my siblings. I’ve been programming for around 5 years now, and have loved the projects we do here at Memphis Hack Club. I’ve developed my own video game an RPG about exploring the forest as teenage boy. I am an avid pianist and guitar guru. I’m a musical composer, and I also run a gaming YouTube channel. I am very proud to be a part of the team here at Memphis Hack Club and would love to meet you. I am happy to answer any questions and introduce you into Memphis HackClub, so please email or text me. 
+              <br>johnpounds@memphishack.com<br>
+              901-288-5334
+              <br /><br /><a href="#" class="fa fa-envelope email" data-name="John"></a><a href="#" class="fa fa-phone phone" data-name="John"></a></p>
           </div>
           <div class="card">
               <h1 class="card-title">Micah</h1>
-            <p>Hi, I'm Micah!  I'm a graphic designer and web developer who's been coding for nearly eight years now!  I started programming on Scratch in 2014 and now I spend most of my time building stuff in Vue 3, Ionic, JavaScript, and more.  Memphis Hack Club added me to their team during late 2021, but I'm very enthusiastic about young coders and love teaching workshops.  You can find my little corner of the Internet at <a href="https://micahlindley.com" target="_blank">micahlindley.com</a> 🚀<br /><br /><a href="#" class="fa fa-envelope email" data-name="Micah"></a><a href="#" class="fa fa-phone phone" data-name="Micah"></a></p>
+            <p>Hi, I'm Micah!  I'm a graphic designer and web developer who's been coding for nearly eight years now!  I started programming on Scratch in 2014 and now I spend most of my time building stuff in Vue 3, Ionic, JavaScript, and more.  Memphis Hack Club added me to their team during late 2021, but I'm very enthusiastic about young coders and love teaching workshops.  You can find my little corner of the Internet at <a href="https://micahlindley.com" target="_blank">micahlindley.com</a> 🚀
+              <br></hi>hi@micahlindley.com<br>
+            731-903-7085
+              <br /><br /><a href="#" class="fa fa-envelope email" data-name="Micah"></a><a href="#" class="fa fa-phone phone" data-name="Micah"></a></p>
           </div>
           <div class="card">
               <h1 class="card-title">Ethan</h1>
-            <p>Hi, I’m Ethan, I’m 13 and I am a part of the Welcome team of Memphis HackClub. I’ve always wanted to create interesting software and games! Besides coding, I love playing soccer and rock climbing. Video games such as Minecraft, Roblox, and various VR Games I probably play a little too much. I’m very happy to be a part of Memphis HackClub and meet so many new friends.<br /><br /><a href="#" class="fa fa-envelope email" data-name="Ethan"></a></p>
+            <p>Hi, I’m Ethan, I’m 13 and I am a part of the Welcome team of Memphis HackClub. I’ve always wanted to create interesting software and games! Besides coding, I love playing soccer and rock climbing. Video games such as Minecraft, Roblox, and various VR Games I probably play a little too much. I’m very happy to be a part of Memphis HackClub and meet so many new friends.
+              <br>ethankal@memphishack.com
+              <br /><br /><a href="#" class="fa fa-envelope email" data-name="Ethan"></a></p>
           </div>
           <div class="card">
               <h1 class="card-title">Asher</h1>
-            <p>Hello, I’m Asher! I have been interested in coding for about eight years now. I started on Scratch and just recently got into Python, HTML, and JavaScript. Besides coding, some of my favorite things to do are playing games, making music, and talking with all of the fantastic people in Memphis Hackclub. I love meeting new people and showing them around, so if you ever need some directions or anything, I can help you.<br /><br /></p>
+            <p>Hello, I’m Asher! I have been interested in coding for about eight years now. I started on Scratch and just recently got into Python, HTML, and JavaScript. Besides coding, some of my favorite things to do are playing games, making music, and talking with all of the fantastic people in Memphis Hackclub. I love meeting new people and showing them around, so if you ever need some directions or anything, I can help you.<br>asherwiggins@memphishack.com<br /><br /></p>
           </div>
 
             <div class="card">
               <h1 class="card-title">Lilly</h1>
-            <p>Hello, I'm Lilly! I've been coding here and there for about 2 years now and am excited to learn and grow. I code websites in HTML and Roblox games in Lua. Other than coding I enjoy video design, theater, and goofing off with my friends. I'm so glad I found Memphis HackClub because it's taught me more about coding and I've made great friends in the process.<br /><br /></p>
+            <p>Hello, I'm Lilly! I've been coding here and there for about 2 years now and am excited to learn and grow. I code websites in HTML and Roblox games in Lua. Other than coding I enjoy video design, theater, and goofing off with my friends. I'm so glad I found Memphis HackClub because it's taught me more about coding and I've made great friends in the process.
+              <br>lillykumpe@memphishack.com<br /><br /></p>
           </div>
           <div class="card">
               <h1 class="card-title">THE CLUB</h1>
             <p>Hello my name is <b>THE CLUB</b>, some know me as <i>THE CLUB</i> and others Memphis Hack Club. That being said, I am a mystic force that connects the most enthusiastic and creative minds together. When these minds
           come together, they speak prophecies of the future…And then they create it. I have distributed many posters, made many students into great programmers, and have allowed students to create the software of the future.
-          I am a powerful force and I have too have an email if you dare speak to THE CLUB.<br /><br /><a href="#" class="fa fa-envelope email" data-name="Club"></a></b></a></p>
+          I am a powerful force and I have too have an email if you dare speak to THE CLUB.
+          <br>club@memphishack.com<br>
+              <br /><br /><a href="#" class="fa fa-envelope email" data-name="Club"></a></b></a></p>
           </div>
         </div>
       <h1 class="welcome">Follow Memphis Hack Club</h1>
