--- a/merch-hoodie.html
+++ b/merch-hoodie.html
@@ -8,7 +8,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Memphis Hackclub Merch</title>
+    <title>Memphis Hack Club Merch</title>
     <link href="style.css" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="merch.css">
     <link rel="icon" type="image/png" href="/274413.svg">
