updated the page

--- a/merch.html
+++ b/merch.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<meta name="description" content="Memphis Hack Club is a coding and engineering club open to any student at any skill level!">
+		<meta name="description" content="Help support Memphis Hack Club's goal by buying merch today 💻 🌎 🚀"">
 		<meta
 			name="keywords"
 			content="memphis coding, memphis student coding, memphis stem, memphis hacking, memphis hackothons, memphis student clubs, whitestation coding, midtown memphis coding, west memphis student clubs, student coding groups memphis, student programming groups memphis, memphis computer science, memphis hackclub, memphis hack club, memphis student engineering, memphis student coding groups">
