--- a/merch-hack-holiday-shirt.html
+++ b/merch-hack-holiday-shirt.html
@@ -38,8 +38,9 @@
               The materials that went into this product are sustainably sourced and economically friendly.<br>
               100% Cotton (fiber content may vary for different colors)<br>
               Medium fabric (6.0 oz/yd² (203 g/m²))<br><br>
-              T-Shirts are printed in Detroit Michigan, and take around a week to arrive. 
-              with the same info, so we can make sure our system is correct.
+              T-shirt printing may have a faint fade after first wash. Follow washing instructions.<br><br>
+              T-Shirts are printed in USA, and take around a week to arrive. 
+              
               <a href="https://donate.memphishack.com" target="_blank">Consider making a tax deductible donation to Memphis HackClub today!- Any amount helps! And thank you!</a>
             </p>
           </div>
