--- a/merch-hbd-shirt.html
+++ b/merch-hbd-shirt.html
@@ -38,8 +38,8 @@
               The materials that went into this product are sustainably sourced and economically friendly.
               <br>100% Cotton (fiber content may vary for different colors)
               <br>Medium fabric (6.0 oz/yd² (203 g/m²))<br>
-              T-shirt printing may have a very faint fade after first wash.<br><br>
-              T-Shirts are printed in Detroit Michigan, and take around a week to arrive. 
+              T-shirt printing may have a faint fade after first wash. Follow washing instructions.<br><br>
+              T-Shirts are printed in the USA, and take around a week to arrive. 
               with the same info, so we can make sure our system is correct. Consider making a
               <a href="https://donate.memphishack.com" target="_blank">tax deductible donation</a>
               to Memphis HackClub today - any amount helps! Thank you!
