added hacker robe

--- a/merch.html
+++ b/merch.html
@@ -83,6 +83,17 @@
 								<span class="tag tag-game">$25</span>
 							</div>
 						</div>
+
+            		<div class="card">
+							<a href="merch-robe.html" target="_blank"><img src="merch-images/robe/robe.png" class="cardImgs">
+								<h1 class="card-title">Robe of the Hacker</h1>
+							</a>
+							<p>Embrace your inner Hacker. . . 
+					
+							<div class="tags">
+								<span class="tag tag-game">$65</span>
+							</div>
+						</div>
 						<div class="card">
 							<img src="merch-images/coming-soon/hat.png" class="cardImgs">
 							<h1 class="card-title">MHC Ballcap</h1>
