fixed shirt page

--- a/merch.html
+++ b/merch.html
@@ -35,6 +35,17 @@
 						<a href="https://donate.memphishack.com">donate.memphishack.com</a>, and donations are appreciated.</p>
 					<br>
 					<div class="card-grid merch">
+
+
+                <div class="card">
+              <a href="merch-cap.html">
+							<img src="merch-images/cap/red.png" class="cardImgs">
+							<h1 class="card-title">MHC Think Cap</h1></a>
+							<p>This snazzy hat is to enhance your hacker brain</p>
+							<div class="tags">
+								<span class="tag tag-game">$22.72</span>
+							</div>
+                  </div>
 						<div class="card">
 							<a href="merch-shirt.html"><img class="cardImgs" src="merch-images/shirt-images/Navy.png">
 								<h1 class="card-title">MHC T-Shirt</h1>
