--- a/merch-cap.html
+++ b/merch-cap.html
@@ -25,21 +25,18 @@
     </div>
     <div id="main">
       <div class="content merch">
-        <h1 class="welcome">MHC t-shirt</h1>
+        <h1 class="welcome">MHC Cap</h1>
         <div class="merch-grid">
           <div class="merch-col">
-            <img class="merch-image" id="image" src="merch-images/shirt-images/White.png">
+            <img class="merch-image" id="image" src="merch-images/cap/white.png">
             <br>
             <div class="merch-price">
               <h2>$25</h2>
               <input type='button' onclick='redirect()' value='Buy Now' class="buy-button"/>
             </div>
             <p class="merch-description">
-              The materials that went into this product are sustainably sourced and economically friendly.
-              <br>100% Cotton (fiber content may vary for different colors)
-              <br>Medium fabric (6.0 oz/yd² (203 g/m²))<br>
-              T-shirt printing may have a faint fade after first wash. Follow washing instructions.<br><br>
-              T-Shirts are printed in Detroit USA, and take around a week to arrive.
+
+              Caps are printed USA, and take around a 1-2 weeks to arrive.
               with the same.  Consider making a
               <a href="https://donate.memphishack.com" target="_blank">tax deductible donation</a>
               to Memphis HackClub today - any amount helps! Thank you!
@@ -54,20 +51,15 @@
           <option value="Red" class="red">Red</option>
           <option value="Yellow" class="yellow">Yellow</option>
           <option value="Navy" class="navy">Navy</option>
-          <option value="Pink" class="pink">Pink</option>
+          <option value="darkgreen" class="darkgreen">Dark Green</option>
+          <option value="green" class="green">Green</option>
+          <option value="purple" class="purple">Purple</option>
         </div>
       </select>
       <br>
       <select id="sizeID" class="dropdown">
-        <option value="s" class="small" selected="selected">small</option>
-        <option value="m" class="medium">medium</option>
-        <option value="l" class="large">large</option>
-        <option value="xl" class="xl">xl</option>
-        <option value="2xl" class="2xl">2xl</option>
-        <option value="3xl" class="3xl">3xl</option>
-        <option value="4xl" class="4xl">4xl</option>
-        <option value="5xl" class="5xl">5xl</option>
-      </select>
+        <option value="s" class="small" selected="selected">One Size</option>
+
       <br><br>
       <!-- <h1>Shipping Info</h1>
       <label>Address<br>
@@ -107,8 +99,8 @@
                     
                     val = 'white';
                     finalSize = 'medium';
-                    var pictureList = ["merch-images/shirt-images/White.png", "merch-images/shirt-images/Red.png", "merch-images/shirt-images/Yellow.png", "merch-images/shirt-images/Navy.png", "merch-images/shirt-images/Pink.png"];
-                    var valList = ["White",  "Red", "Yellow", "Navy", "Pink"];
+                    var pictureList = ["merch-images/cap/white.png","merch-images/cap/red.png", "merch-images/cap/yellow.png" "merch-images/cap/navy.png", "merch-images/cap/darkgreen.png", "merch-images/cap/green.png", "merch-images/cap/purple.png"];
+                    var valList = ["White", "Red", "Yellow", "Navy", "DarkGreen", "Green", "Purple" ];
                     window.addEventListener('DOMContentLoaded', () => {
                       const yearDropDown = document.getElementById('picDD');
                       yearDropDown.addEventListener('change', () => {
@@ -202,8 +194,14 @@
                         background-color: navy;
                         color: white;
                       }
-                      .pink {
-                        background-color: pink;
+                      .darkgreen {
+                        background-color: darkgreen;
+                      }
+                      .green {
+                        background-color: green;
+                      }
+                      .purple {
+                        background-color: purple;
                       }
                     </style>
                   </script>
