fixed a lot of issues and added the hat

--- a/merch-cap.html
+++ b/merch-cap.html
@@ -51,9 +51,9 @@
           <option value="Red" class="red">Red</option>
           <option value="Yellow" class="yellow">Yellow</option>
           <option value="Navy" class="navy">Navy</option>
-          <option value="darkgreen" class="darkgreen">Dark Green</option>
-          <option value="green" class="green">Green</option>
-          <option value="purple" class="purple">Purple</option>
+          <option value="Dark-Green" class="darkgreen">Dark Green</option>
+          <option value="Green" class="green">Green</option>
+          <option value="Purple" class="purple">Purple</option>
         </div>
       </select>
       <br>
@@ -99,8 +99,8 @@
                     
                     val = 'white';
                     finalSize = 'medium';
-                    var pictureList = ["merch-images/cap/white.png","merch-images/cap/red.png", "merch-images/cap/yellow.png" "merch-images/cap/navy.png", "merch-images/cap/darkgreen.png", "merch-images/cap/green.png", "merch-images/cap/purple.png"];
-                    var valList = ["White", "Red", "Yellow", "Navy", "DarkGreen", "Green", "Purple" ];
+                    var pictureList = ["merch-images/cap/white.png","merch-images/cap/red.png", "merch-images/cap/yellow.png", "merch-images/cap/navy.png", "merch-images/cap/darkgreen.png", "merch-images/cap/green.png", "merch-images/cap/purple.png"];
+                    var valList = ["White", "Red", "Yellow", "Navy", "Dark-Green", "Green", "Purple" ];
                     window.addEventListener('DOMContentLoaded', () => {
                       const yearDropDown = document.getElementById('picDD');
                       yearDropDown.addEventListener('change', () => {
