--- a/merch-hack-holiday-shirt.html
+++ b/merch-hack-holiday-shirt.html
@@ -107,8 +107,8 @@
                     
                     val = 'white';
                     finalSize = 'medium';
-                    var pictureList = ["merch-images/hoodie-images/white.png", "merch-images/hoodie-images/navy.jpeg"];
-                    var valList = ["White", "Navy"];
+                    var pictureList = ["merch-images/hack-holiday/red.png", "merch-images/hack-holiday/green.png", "merch-images/hack-holiday/light-blue.png", "merch-images/hack-holiday/navy.png", "merch-images/hack-holiday/purple.png"];
+                    var valList = ["Red", "Green", "Light-Blue", "Navy", "Purple"];
                     window.addEventListener('DOMContentLoaded', () => {
                       const yearDropDown = document.getElementById('picDD');
                       yearDropDown.addEventListener('change', () => {
