--- a/merch-hbd-shirt.html
+++ b/merch-hbd-shirt.html
@@ -103,8 +103,8 @@
                     
                     val = 'white';
                     finalSize = 'medium';
-                    var pictureList = ["merch-images/shirt-images/white.png", "merch-images/shirt-images/navy.jpeg"];
-                    var valList = ["White", "Navy"];
+                    var pictureList = ["merch-images/hacky-bd-shirt/on.png", "merch-images/hacky-bd-shirt/off.png",];
+                    var valList = ["on", "off"];
                     window.addEventListener('DOMContentLoaded', () => {
                       const yearDropDown = document.getElementById('picDD');
                       yearDropDown.addEventListener('change', () => {
