--- a/merch.html
+++ b/merch.html
@@ -106,9 +106,9 @@
 							</div>
 						</div>
 						<div class="card">
-							<img src="merch-images/coming-soon/hat.png" class="cardImgs">
-							<h1 class="card-title">MHC Ballcap</h1>
-							<p>This snazzy hat is coming to you soon!</p>
+							<img src="merch-images/coming-soon/kicks.png" class="cardImgs">
+							<h1 class="card-title">MHC Speedster Kicks</h1>
+							<p>These are to your feet as overclocking is to your computer! - They make you fast.</p>
 							<div class="tags">
 								<span class="tag tag-extension">COMING SOON</span>
 							</div>
