added Memphis Hacked Chicken

--- a/merch.html
+++ b/merch.html
@@ -105,6 +105,18 @@
 								<span class="tag tag-game">$65</span>
 							</div>
 						</div>
+
+            <div class="card">
+							<a href="merch-m-shirt.html" target="_blank"><img src="merch-images/m-shirt/ocean.jpg" class="cardImgs">
+								<h1 class="card-title">The π Million United States Dollar Shirt</h1>
+							</a>
+							<p>The most boutique craftsmanship of Memphis Hack Club.
+					
+							<div class="tags">
+								<span class="tag tag-game" >$3,145,926.53</span>
+							</div>
+						</div>
+            
 						<div class="card">
 							<img src="merch-images/coming-soon/kicks.png" class="cardImgs">
 							<h1 class="card-title">MHC Speedster Kicks</h1>
