updated the stock

--- a/merch-m-shirt.html
+++ b/merch-m-shirt.html
@@ -36,7 +36,7 @@
             </div>
             <p class="merch-description">
               The Memphis Hacked Chicken is a unisex, perfectly crafted unique color blasted t-shirt!. Crafted with 100% with incredibly soft, ring-spun cotton, each garment is soft-washed and garment-dyed. Its relaxed fit makes perfect for any occasion.
-
+<br> Clay small and medium are currently out of stock.
 <br>• 100% ringspun cotton
 <br>• Medium fabric (6.1 oz/yd² (206.8 g/m²))
 <br>• Garment-dyed color blast fabric
