about to implement dark/light mode

--- a/merch-robe.html
+++ b/merch-robe.html
@@ -222,5 +222,8 @@
             </div>
           </body>
           <script src="script.js"></script>
+  <script src="mode.js">
+
+</script>
         </div>
       </html>
