--- a/merch-chuck.html
+++ b/merch-chuck.html
@@ -213,4 +213,7 @@
               </div>
             </body>
             <script src="script.js"></script>
+  <script src="mode.js">
+
+</script>
           </html>
