--- a/merch-hack-holiday-shirt.html
+++ b/merch-hack-holiday-shirt.html
@@ -220,3 +220,6 @@
                 </div>
               </body>
               <script src="script.js"></script>
+              <script src="mode.js">
+
+</script></html>
