--- a/merch-hbd-shirt.html
+++ b/merch-hbd-shirt.html
@@ -215,4 +215,7 @@
               </div>
             </body>
             <script src="script.js"></script>
+  <script src="mode.js">
+
+</script>
           </html>
