--- a/merch-hoodie.html
+++ b/merch-hoodie.html
@@ -223,5 +223,8 @@
             </div>
           </body>
           <script src="script.js"></script>
+  <script src="mode.js">
+
+</script>
         </div>
       </html>
