implemented dark/lightmode

--- a/index.html
+++ b/index.html
@@ -126,6 +126,8 @@
         <h3>
           <a href="https://discord.gg/khnBzkzzjA" target="_blank">Join our Discord Server</a>
         </h3>
+        <br>
+          <center><button onclick="modeFunction()">Dark/Light Mode</button></center>>
         <br/>
         <h1 class="welcome">Follow Us</h1>
         <a href="https://www.instagram.com/memphishackclub/" target="_blank" class="fa fa-instagram"></a>
