small update to project.html

--- a/projects.html
+++ b/projects.html
@@ -166,11 +166,11 @@
 
           <div class="card">
 						<a href="https://gamejolt.com/games/book1/678024?" target="_blank"><img class="cardImgs" src="images/MachineShield.png">
-							<h1 class="card-title">Levels of Fear: Void Walker</h1>
+							<h1 class="card-title">Levels of Fear: Voidwalker</h1>
 						</a>
 						<p>Alex is using Unreal engine to make his first indie game
 							<a href="https://gamejolt.com/games/book1/678024" target="_blank">
-								 Levels of Fear: Void Walker</a>.  Void Walker tells story of the investigator, Jonathan Hunter after he awakes in a strange universe. Alex is still developing this game, but you can follow along on <a href ="https://gamejolt.com/games/book1/678024" target="_blank">Void Walker's Game Jolt Page</a></p>
+								 Levels of Fear: Voidwalker</a>.  Voidwalker tells story of the investigator, Jonathan Hunter after he awakes in a strange universe. Alex is still developing this game, but you can follow along on <a href ="https://gamejolt.com/games/book1/678024" target="_blank">Voidwalker's Game Jolt Page</a></p>
 						<div class="tags">
 							<span class="tag tag-game">GAME</span>
 							
