updated the discord page

--- a/discord.html
+++ b/discord.html
@@ -36,8 +36,8 @@
       <br />
 
       <h1 class="welcome">Join the Discord!!!</h1>
-      <a href="https://discord.gg/khnBzkzzjA" target="_blank"><img src="images/discord.jpeg" width="100%" height="100%" /></a>
-      <p>We love to talk 24/7 about technology, coding, and sooo much more! <a href="https://discord.gg/khnBzkzzjA" target="_blank">Click here to join the Discord and expand your mind...</a></p>
+      <a href="https://discord.memphishack.com" target="_blank"><img src="images/discord.jpeg" width="100%" height="100%" /></a>
+      <p>We love to talk 24/7 about technology, coding, and sooo much more! <a href="https://discord.memphishack.com" target="_blank">Click here to join the Discord and expand your mind...</a></p>
       <br />
 
       <h1 class="welcome">Also ...</h1>
