slight typo before

--- a/merch-summer.html
+++ b/merch-summer.html
@@ -25,7 +25,7 @@
     </div>
     <div id="main">
       <div class="content merch">
-        <h1 class="welcome">MHC Summer Tie Die Line T-shirts</h1>
+        <h1 class="welcome">MHC Summer Tie Dye Line T-shirts</h1>
         <div class="merch-grid">
           <div class="merch-col">
             <img class="merch-image" id="image" src="merch-images/summer-line/blue.jpeg">
