fixed another typo

--- a/merch.html
+++ b/merch.html
@@ -63,7 +63,7 @@
 
     						<div class="card">
 							<a href="merch-summer.html"><img class="cardImgs" src="merch-images/summer-line/blue.jpeg">
-								<h1 class="card-title">MHC Summer Tie Die</h1>
+								<h1 class="card-title">MHC Summer Tie Dye</h1>
 							</a>
 							<p>A bright Hack Club summer tee featuring our logo and motto! 17.666% off for opening sale!</p>
 							<div class="tags">
