fix attempt 1 at color chooser on summer-perch

--- a/merch-summer.html
+++ b/merch-summer.html
@@ -52,10 +52,10 @@ Slight color variations may occur due to the dyeing process<br>
       <div class="merch-col">
         <h1>Color Preview Tool</h1>
         <select id="picDD" class="dropdown">
-          <option value="Blue" class="white" selected="selected">White</option>
-          <option value="Light" class="red">Red</option>
-          <option value="Pink" class="yellow">Yellow</option>
-          <option value="Yellow" class="navy">Navy</option>
+          <option value="Blue" class="blue" selected="selected">Blue</option>
+          <option value="Light" class="white">Light Blue</option>
+          <option value="Pink" class="pink">Pink</option>
+          <option value="Yellow" class="yellow">Yellow</option>
         </div>
       </select>
       <br>
