updated the PyraHacks merch pages with general specs

--- a/merch-pyrahoodie.html
+++ b/merch-pyrahoodie.html
@@ -34,8 +34,12 @@
               <input type='button' onclick='redirect()' value='Buy Now' class="buy-button"/>
             </div>
             <p class="merch-description">
-               
-              
+               50% cotton, 50% polyester<br>
+Medium-heavy fabric (8.0 oz/yd² (271 g/m²))<br>
+Classic fit<br>
+Tear-away label<br>
+Runs true to size<br>
+              Hoodie printed in Santa Fe Springs, California and takes 1-2 weeks to arrive for US customers.<br>
               <a href="https://fundraising.stjude.org/site/TR?fr_id=136050&pg=entry" target="_blank">Consider making a tax deductible donation to St. Jude today!- Any amount helps! And thank you!</a>
             </p>
           </div>
