--- a/merch-pyrashirt.html
+++ b/merch-pyrashirt.html
@@ -34,7 +34,12 @@
               <input type='button' onclick='redirect()' value='Buy Now' class="buy-button"/>
             </div>
             <p class="merch-description">
-               
+               100% Preshrunk cotton<br>
+Medium fabric (5.3 oz/yd² (180 g/m²))<br>
+ Classic Fit<br>
+Runs true to size<br>
+Slight color variations may occur due to the dyeing process<br>
+T-shirts are printed in San Jose, California, and take 1-2 weeks to arrive for US customers.<br>
               
               <a href="https://fundraising.stjude.org/site/TR?fr_id=136050&pg=entry" target="_blank">Consider making a tax deductible donation to St. Jude today!- Any amount helps! And thank you!</a>
             </p>
