--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
           <a href="mailto:blakefreeman@memphishack.com">Email Blake</a>
           or text 858-946-8515</h3>
         <h3>
-          <a href="https://discord.gg/khnBzkzzjA" target="_blank">Join our Discord Server</a>
+          <a href="https://join.memphishack.com" target="_blank">Join our Discord Server</a>
         </h3>
         <br>
           <center><button onclick="modeFunction()">Dark/Light Mode</button></center>>
