added robotics to navbar

--- a/index.html
+++ b/index.html
@@ -33,12 +33,13 @@
         <a href="https://us02web.zoom.us/j/9677067646">
           <span id="zoom"></span></a>
       </div>
-      <div class="navbar">
+     <div class="navbar">
         <a href="#main">Home</a>
         <a href="howtojoin.html">Join MHC</a>
         <a href="contact.html">Contact</a>
         <a href="projects.html">Projects</a>
         <a href="merch.html">Merch</a>
+        <a href="robotics.html">Robotics</a>
       </div>
     </div>
     <div id="main">
