added robotics to nav bar

--- a/contact.html
+++ b/contact.html
@@ -22,6 +22,7 @@
     <a href="#main1">Contact</a>
     <a href="projects.html">Projects</a>
     <a href="merch.html">Merch</a>
+    <a href="robotics.html">Robotics</a>
   </div>
   <div id="main1">
     <br />
