--- a/projects.html
+++ b/projects.html
@@ -22,6 +22,7 @@
 			<a href="contact.html">Contact</a>
 			<a href="#main">Projects</a>
 			<a href="merch.html">Merch</a>
+      <a href="robotics.html">Robotics</a>
 		</div>
 		<div id="main">
 			<div class="content join">
