--- a/merch.html
+++ b/merch.html
@@ -22,6 +22,7 @@
 			<a href="contact.html">Contact</a>
 			<a href="projects.html">Projects</a>
 			<a href="#main">Merch</a>
+      <a href="robotics.html">Robotics</a>
 		</div>
 		<div id="main">
 			<div class="content join">
