--- a/robotics.html
+++ b/robotics.html
@@ -53,7 +53,7 @@
               
               <br /><br /><a href="#" class="fa fa-envelope email" data-name="Sophia"></a><a href="#" class="fa fa-phone phone" data-name="Sophia"></a></p>
           </div>
-        <a href="https://docs.google.com/forms/d/e/1FAIpQLSejdMHAqrrbVoMKFR6crJfkNB8PhmzgPkh5rm0hwhBPRKY4JA/viewform?usp=sf_link" class="button">Information Request</a>
+        <a href="https://forms.gle/Cko1BMD5JqoAK85r8" class="button">Information Request</a>
            <a href="images/RobotAppForm.pdf" class="button">Student Application Form </a>
         <br></center>
 <br><br><br><br>
