Added Donate Tab

--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
      <div class="navbar">
         <a href="#main">Home</a>
         <a href="howtojoin.html">Join MHC</a>
+           <a href="https://bank.hackclub.com/donations/start/memphis-hackclub">Donate</a>
+
         <a href="contact.html">Contact</a>
         <a href="projects.html">Projects</a>
         <a href="merch.html">Merch</a>
