Added Donate Tab

--- a/merch.html
+++ b/merch.html
@@ -19,6 +19,8 @@
 		<div class="navbar">
 			<a href="index.html">Home</a>
 			<a href="howtojoin.html">Join MHC</a>
+			    <a href="https://bank.hackclub.com/donations/start/memphis-hackclub">Donate</a>
+
 			<a href="contact.html">Contact</a>
 			<a href="projects.html">Projects</a>
 			<a href="#main">Merch</a>
