--- a/index.html
+++ b/index.html
@@ -33,15 +33,14 @@
         <a href="https://us02web.zoom.us/j/9677067646">
           <span id="zoom"></span></a>
       </div>
-     <div class="navbar">
+      <div class="navbar">
         <a href="#main">Home</a>
         <a href="howtojoin.html">Join MHC</a>
-           <a href="https://bank.hackclub.com/donations/start/memphis-hackclub">Donate</a>
-
         <a href="contact.html">Contact</a>
         <a href="projects.html">Projects</a>
         <a href="merch.html">Merch</a>
         <a href="robotics.html">Robotics</a>
+        <a href = "CS_Class.html">CS Class</a>
       </div>
     </div>
     <div id="main">
@@ -127,7 +126,7 @@
           <a href="mailto:blakefreeman@memphishack.com">Email Blake</a>
           or text 858-946-8515</h3>
         <h3>
-          <a href="https://join.memphishack.com" target="_blank">Join our Discord Server</a>
+          <a href="https://discord.gg/khnBzkzzjA" target="_blank">Join our Discord Server</a>
         </h3>
         <br>
           <center><button onclick="modeFunction()">Dark/Light Mode</button></center>>
