--- a/contact.html
+++ b/contact.html
@@ -24,6 +24,7 @@
     <a href="projects.html">Projects</a>
     <a href="merch.html">Merch</a>
     <a href="robotics.html">Robotics</a>
+     <a href="CS_Class.html"> CS Course</a>
   </div>
   <div id="main1">
     <br />
