--- a/projects.html
+++ b/projects.html
@@ -19,12 +19,12 @@
 		<div class="navbar">
 			<a href="index.html">Home</a>
 			<a href="howtojoin.html">Join MHC</a>
-			    <a href="https://bank.hackclub.com/donations/start/memphis-hackclub">Donate</a>
-
+			<a href="https://bank.hackclub.com/donations/start/memphis-hackclub">Donate</a>
 			<a href="contact.html">Contact</a>
 			<a href="#main">Projects</a>
-			<a href="merch.html">Merch</a>
-      <a href="robotics.html">Robotics</a>
+			<a href="merch.html">Merch</a>		 
+     			 <a href="robotics.html">Robotics</a>
+			<a href="CS_Class.html"> CS Course</a>
 		</div>
 		<div id="main">
 			<div class="content join">
