--- a/merch.html
+++ b/merch.html
@@ -25,6 +25,7 @@
 			<a href="projects.html">Projects</a>
 			<a href="#main">Merch</a>
       <a href="robotics.html">Robotics</a>
+			     <a href="CS_Class.html"> CS Course</a>
 		</div>
 		<div id="main">
 			<div class="content join">
