--- a/robotics.html
+++ b/robotics.html
@@ -23,6 +23,7 @@
     <a href="projects.html">Projects</a>
     <a href="merch.html">Merch</a>
     <a href="">Robotics</a>
+    <a href="CS_Class.html"> CS Course</a>
   </div>
   <div id="robotics">
     <br />
