fixed typo in CS Course tab

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <a href="projects.html">Projects</a>
         <a href="merch.html">Merch</a>
         <a href="robotics.html">Robotics</a>
-        <a href = "CS_Class.html">CS Class</a>
+        <a href = "CS_Class.html">CS Course</a>
       </div>
     </div>
     <div id="main">
