changed type in class description

--- a/CS_Class.html
+++ b/CS_Class.html
@@ -70,7 +70,7 @@
         <br></center>
 <br><br><br><br>
 
-<h1 class="welcome">What Does it Mean to Join The Team?</h1>
+<h1 class="welcome">What Will The Class Look Like?</h1>
       <p>Students will participate in weekly class workshops, taught by <b>Memphis HackClub</b>. These workshops are free and open to anyone <i>(including those not taking the course)</i> and will cover all the programming concepts mentioned above through interactive and fun projects. 
 <br><br>
 Students will be assigned lessons from the <a href="https://www.khanacademy.org/computing/ap-computer-science-principles">“AP Computer Science Principle”</a> created by Khan Academy in between class days to continue to grow on these concepts. Leaders fromMemphis HackClub will check in on each student to make sure their course is going well, and assist whenever the student needs it. 
