added merch page 2

--- a/CS_Class.html
+++ b/CS_Class.html
@@ -22,7 +22,7 @@
     <a href="https://bank.hackclub.com/donations/start/memphis-hackclub">Donate</a>
     <a href="contact.html">Contact</a>
     <a href="projects.html">Projects</a>
-    <a href="merch.html">Merch</a>
+    <a href="https://memphis-hackclub.square.site/s/shop">Merch</a>
     <a href="robotics.html">Robotics</a>
     <a href=""> CS Course</a>
   </div>
