--- a/contact.html
+++ b/contact.html
@@ -93,6 +93,11 @@
               <br>lillykumpe@memphishack.com<br /><br /></p>
           </div>
           <div class="card">
+              <h1 class="card-title">Alex</h1>
+            <p>Hi, I'm Alex. I've been programming for about 5 years and my main interests are in cybersecurity, programming, and physics. Outside of the more technical realm I enjoy playing tennis and hanging out with friends. As of August 2023, I've been in Hackclub for around a year and a half and I'm very grateful for the opportunities it's provided me with.
+              <br>alexbarthel@memphishack.com<br /><br /></p>
+          </div>
+          <div class="card">
               <h1 class="card-title">THE CLUB</h1>
             <p>Hello my name is <b>THE CLUB</b>, some know me as <i>THE CLUB</i> and others Memphis Hack Club. That being said, I am a mystic force that connects the most enthusiastic and creative minds together. When these minds
           come together, they speak prophecies of the future…And then they create it. I have distributed many posters, made many students into great programmers, and have allowed students to create the software of the future.
